; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/ia32/extr_binfmt_elf32.c_elf32_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/ia32/extr_binfmt_elf32.c_elf32_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.elf_phdr = type { i64, i64, i64 }

@IA32_PAGE_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i64, %struct.elf_phdr*, i32, i32, i64)* @elf32_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @elf32_map(%struct.file* %0, i64 %1, %struct.elf_phdr* %2, i32 %3, i32 %4, i64 %5) #0 {
  %7 = alloca %struct.file*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.elf_phdr*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store %struct.file* %0, %struct.file** %7, align 8
  store i64 %1, i64* %8, align 8
  store %struct.elf_phdr* %2, %struct.elf_phdr** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i64 %5, i64* %12, align 8
  %14 = load %struct.elf_phdr*, %struct.elf_phdr** %9, align 8
  %15 = getelementptr inbounds %struct.elf_phdr, %struct.elf_phdr* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @IA32_PAGE_MASK, align 8
  %18 = xor i64 %17, -1
  %19 = and i64 %16, %18
  store i64 %19, i64* %13, align 8
  %20 = load %struct.file*, %struct.file** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* @IA32_PAGE_MASK, align 8
  %23 = and i64 %21, %22
  %24 = load %struct.elf_phdr*, %struct.elf_phdr** %9, align 8
  %25 = getelementptr inbounds %struct.elf_phdr, %struct.elf_phdr* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %13, align 8
  %28 = add i64 %26, %27
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load %struct.elf_phdr*, %struct.elf_phdr** %9, align 8
  %32 = getelementptr inbounds %struct.elf_phdr, %struct.elf_phdr* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* %13, align 8
  %35 = sub i64 %33, %34
  %36 = call i64 @ia32_do_mmap(%struct.file* %20, i64 %23, i64 %28, i32 %29, i32 %30, i64 %35)
  ret i64 %36
}

declare dso_local i64 @ia32_do_mmap(%struct.file*, i64, i64, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
